@@ -1,3 +1,9 @@
+2007-02-02  Scott Reeves  <sreeves@novell.com>
+	* src/control-center.c
+	  etc/yast2-control-center.schemas.in:
+	Remove default tasks - BNC#240242
+	Update to latest libslab code.
+
 2007-01-26  Scott Reeves  <sreeves@novell.com>
 	* src/control-center.c:
 	Fix for BNC #236464 - duplicated items.
